# docs/swagger.json
@@ -1,13 +1,11 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
+        "description": "This is a simple API for marketplace.",
+        "title": "Go-Toko API",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "Dihanto",
+            "email": "dihanto2306@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,11 +13,15 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "host": "localhost:2000",
     "paths": {
         "/customer": {
             "put": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
                 "description": "Update customer",
                 "tags": [
                     "Customer"
@@ -28,7 +30,7 @@
                 "parameters": [
                     {
                         "description": "Update Customer",
-                        "name": "request",
+                        "name": "request_body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -46,15 +48,20 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
                 "description": "Delete customer",
                 "tags": [
-                    "customer"
+                    "Customer"
                 ],
                 "summary": "Delete customer",
                 "parameters": [
                     {
                         "description": "Delete customer",
-                        "name": "request",
+                        "name": "request_body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -82,7 +89,7 @@
                 "parameters": [
                     {
                         "description": "Login Customer",
-                        "name": "request",
+                        "name": "request_body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -109,8 +116,8 @@
                 "summary": "Register customer",
                 "parameters": [
                     {
-                        "description": "Request Body",
-                        "name": "request",
+                        "description": "Register Customer",
+                        "name": "request_body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -127,9 +134,266 @@
                     }
                 }
             }
+        },
+        "/order": {
+            "post": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Add order",
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Add order",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "request_body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AddOrder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/order/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Find order",
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Find order",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/product": {
+            "get": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Get product",
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get product",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Add product",
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Add product",
+                "parameters": [
+                    {
+                        "description": "Add Product",
+                        "name": "request_body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AddProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Find product",
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Find product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Update product",
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Update product",
+                "parameters": [
+                    {
+                        "description": "Update Product",
+                        "name": "request_body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateProduct"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Delete product",
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Delete product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.WebResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "request.AddOrder": {
+            "type": "object",
+            "required": [
+                "id_customer",
+                "id_product",
+                "quantity"
+            ],
+            "properties": {
+                "id_customer": {
+                    "type": "string"
+                },
+                "id_product": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.AddProduct": {
+            "type": "object",
+            "required": [
+                "id_seller",
+                "name",
+                "price",
+                "quantity"
+            ],
+            "properties": {
+                "id_seller": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.CustomerDelete": {
             "type": "object",
             "required": [
@@ -197,6 +461,29 @@
                 }
             }
         },
+        "request.UpdateProduct": {
+            "type": "object",
+            "required": [
+                "id",
+                "name",
+                "price",
+                "quantity"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
         "response.WebResponse": {
             "type": "object",
             "properties": {
@@ -211,14 +498,5 @@
                 }
             }
         }
-    },
-    "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
-        }
-    },
-    "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
     }
 }
